--- a/aprendiendo_html/public_html/css/style.css
+++ b/aprendiendo_html/public_html/css/style.css
@@ -8,11 +8,11 @@
 }
 
 html{
-    font-size : 63%;
+    font-size : 62%;
 }
 
 body{
-    font-size: 16px;
+    font-size: 13px;
 }
 
 h1{
@@ -21,10 +21,17 @@ h1{
     color:white;
     font-size: 3.8rem;
 }
+.tituloPrincipal {
+    text-align: center;
+    background: var(--marron);
+    color: white;
+    font-family: var(--arial);
+    font-size: 2rem;
+    margin:var(--centrar);
+}
 
 .titulo {
     text-align: center;
-    background: var(--marron);
     color: white;
     font-family: var(--arial);
     margin:var(--centrar);
@@ -39,21 +46,49 @@ span{
 }
 
 .nav-principal{
-    padding:1rem;
     background: var(--azul);
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .nav-principal a{
     color: white;
     text-decoration: none;
+    font-size : 1.75rem;
+    font-weight: bold;
+    padding: 0.5rem;
+}
+.nav-principal a:hover{
+    background: var(--marron);
+    color:black;
 }
 
 .contenedor{
-    width:120rem;
+    max-width:120rem;
     margin: var(--centrar);
 }
 
 .navP-fondo{
     background: var(--azul);
+}
+
+.contenido-subTitulo{
+    background-image: url(../imagenes_iconos/progra.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 40.5rem;
+    color:white;
+}
+
+@media (min-width:480px){
+    .tituloPrincipal{
+        font-size: 4rem;
+    }
+    .nav-principal{
+        flex-direction: row;
+
+    }
+
 }
 
