--- a/aprendiendo_html/public_html/css/style.css
+++ b/aprendiendo_html/public_html/css/style.css
@@ -9,6 +9,11 @@
 
 html{
     font-size : 62%;
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 
 body{
@@ -47,12 +52,15 @@ span{
 
 .nav-principal{
     background: var(--azul);
-    display:flex;
+    display:flex; /*este display sirve para darle direccion al nav, ya sea en fila o en columna*/
     flex-direction: column;
-    justify-content: space-around;
+    /* justify-content: space-around; crea espacios entre links de mi nav  inicio   sobre mi   contacto*/
+
 }
 
 .nav-principal a{
+    display: block;
+    text-align: center;
     color: white;
     text-decoration: none;
     font-size : 1.75rem;
@@ -74,11 +82,21 @@ span{
 }
 
 .contenido-subTitulo{
-    background-image: url(../imagenes_iconos/progra.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 40.5rem;
     color:white;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);  
+    padding: 30px;
+    display: flex;
+}
+
+.subTitulo{
+    background-image: url(../imagenes_iconos/programacion.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    height: 200px;
 }
 
 @media (min-width:480px){
@@ -87,8 +105,13 @@ span{
     }
     .nav-principal{
         flex-direction: row;
-
+        justify-content: space-around;
     }
+
+    .subTitulo{
+        height: 400px;
+    }
+
 
 }
 
